# FFSVersionManager

./: .gitignore  README.md  install.bat  main.py  pyproject.toml
src/: const.py  utils.py
src/core/: config_parser.py  core_config.py  ffs_config_parser.py  file_history_model.py  file_remarks_model.py  path_manager.py  registry_handler.py  sync_config_model.py
src/gui/: file_history_view.py  gui_config.py  main_window.py  registry_utils.py  singleton.py  sync_config_view.py
src/res/: resource.qrc
